# gpt-pretends-itsa-compiler

./: .gitignore  LICENSE.md  README.md  Writeup.md  llm.env.example  pyproject.toml  sample.c  sample.java  sample.py  sample_divide.c  sample_phi.c
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  HelloWorld.md
pretend_compiler/: __init__.py  __main__.py  cli.py  graph.py  llm_factory.py  models_pull.py  models_registry.py  settings.py  state.py  structured_kwargs.py  vm_tool_registry.py
pretend_compiler/agents/: __init__.py  compiler.py  heuristic_ir.py  ir_normalize.py  precompiler.py  schemas.py  vm_runner.py  vm_tools.py
tests/: test_cli_stdin_resolve.py  test_compiler_json_parse.py  test_deterministic_gate.py  test_graph_mocked.py  test_graph_use_files.py  test_heuristic_ir.py  test_hosted_smoke.py  test_integration_local_llm.py  test_ir_normalize.py  test_llm_env_upsert.py  test_vm_runner.py
tests/fixtures/: hello.c  hello.cpp
